Fix alignment of admin navigation

--- a/src/labsome/frontend/src/styles/common/_navigation.scss
+++ b/src/labsome/frontend/src/styles/common/_navigation.scss
@@ -4,5 +4,9 @@ ul.nav-stacked {
     font-weight: $labsome-nav-pills-font-weight;
     text-transform: uppercase;
     padding: $labsome-nav-pills-padding;
+
+    &:first-child {
+      padding-top: 0;
+    }
   };
 }
